Fill in template, add goat_counter
Switched most (but not all) of the template filler for real information
from this site.

Added the Goatcounter analytics script, along with a site privacy
policy.

--- a/_config.yml
+++ b/_config.yml
@@ -13,18 +13,17 @@
 title: MaybeFIRE
 
 # Your name to show in the footer
-author: Brian Williammee
+author: TBD
 
 ###############################################
 # --- List of links in the navigation bar --- #
 ###############################################
 
 navbar-links:
-  About Me: "aboutme"
+  About: "about"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
   Privacy: "privacy"
 
 ################
