--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ edit_page_button: true
 navbar-var-length: false
 
 # The keywords to associate with your website, for SEO purposes
-#keywords: "my,list,of,keywords"
+keywords: "retirement,FIRE,chubbyFIRE,financial independence,retire early,drawdown,ACA,Obamacare,subsidy,tax,tax optimization"
 
 ######################################
 # --- Colours / background image --- #
